--- a/index.html
+++ b/index.html
@@ -223,6 +223,14 @@
   </div>
 
   <div id="toast" class="toast hidden">Salvato</div>
+  <!-- SDK Firebase (modular CDN) -->
+  <script type="module" src="https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js"></script>
+  <script type="module" src="https://www.gstatic.com/firebasejs/10.13.2/firebase-auth.js"></script>
+  <script type="module" src="https://www.gstatic.com/firebasejs/10.13.2/firebase-firestore.js"></script>
+  <script type="module" src="https://www.gstatic.com/firebasejs/10.13.2/firebase-storage.js"></script>
+
+  <!-- Il tuo wrapper -->
+  <script src="firebase.js"></script>
   <script src="documents.js"></script>
   <script src="script.js"></script>
 </body>
